<resources>
    <string name="app_name">NSQL Project</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Home</string>
    <string name="add_book">Add Book</string>
    <string name="settings">Settings</string>
    <string name="add_list">Add  List</string>
    <string name="change_name">Change name</string>
    <string name="remove">Remove</string>
    <string name="edit_book">Edit book</string>
    <string name="compareLists">Compare lists</string>
    <string name="book_cover">Book cover</string>
    <string name="ch_separator">/</string>
</resources>